--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           class="webinar__img"
         />
         <div class="webinar__title subtitle">Первый вебинар состоится:</div>
-        <time class="webinar__time">10 сентября в 20:00 по Москве</time>
+        <div class="webinar__time">10 сентября в 20:00 по Москве</div>
         <div class="webinar__subtitle">
           Успейте записаться, количество мест ограничено!
         </div>
